# CMakeQuickProj

./: CMakeLists.txt  README.md  cmake_library_with_unit_tests.sh  cpp_hello_world.sh  cpp_lib_with_tests.sh  cpp_library_project_with_unit_tests.sh  hello_world.sh  library.sh  library_with_unit_tests.sh  unit-tests.sh  unit_tests_only.sh
.cpp/hello_world/: CMakeLists.txt
.cpp/library_with_unit_tests/: CMakeLists.txt
.cpp/library_with_unit_tests/test/: CMakeLists.txt
.cpp/qtpainter/: CMakeLists.txt  main.cpp
GUI/: qt_conan.sh  qt_painter_widget.sh  sdl_conan.sh
SDL/: CMakeLists.txt
SFML/: CMakeLists.txt
cpp/library_with_unit_tests/: .gitlab-ci.yml  CMakeLists.txt
cpp/library_with_unit_tests/.cmake/: extras.cmake
cpp/library_with_unit_tests/test/: unit-main.cpp
